<resources>
    <string name="app_name">FaturApp Micro</string>

    <string name="company_name">Nome da empresa</string>
    <string name="company_cnpj">CPF/CNPJ</string>

    <string name="empty_company_name">- Adicione o nome -</string>
    <string name="empty_company_cpf_cnpj">- Adicione CPF/CNPJ -</string>

    <string name="this_month">Resumo do mês</string>
    <string name="entrance">Entrada</string>
    <string name="exit">Saída</string>

    <string name="create_client">Cadastrar cliente</string>
    <string name="create_account">Cadastrar conta</string>

    <string name="register_client_name">Nome:</string>
    <string name="register_client_cpf_cnpj">CPF/CNPJ:</string>
    <string name="register_client_contact">Contato:</string>
    <string name="register_client_address">Endereço:</string>
    <string name="register_client_pix">PIX:</string>

    <string name="register_account_toggle_button">Pagar ou receber</string>
    <string name="register_account_toggle_on">Receber</string>
    <string name="register_account_toggle_off">Pagar</string>
    <string name="register_account_description">Descrição:</string>
    <string name="register_account_client">Cliente:</string>
    <string name="register_account_value">Valor:</string>
    <string name="register_account_expiration">Vencimento:</string>
    <string name="register_account_paid">Pago:</string>

    <string name="optional">Opicional</string>
    <string name="empty_recycler">Nada para ver aqui! ¯\\_(ツ)_/¯</string>

    // Mock Strings
    <string name="name">Guilherme França</string>
    <string name="info">123.456.789-0</string>
    <string name="account">Conta de luz</string>
    <string name="value">R$ 100,00</string>
</resources>